add rpi
